@@ -137,6 +137,7 @@ PHP                                                                        NEWS
 - Fixed bug #48983 (DomDocument : saveHTMLFile wrong charset). (Rob)
 - Fixed bug #48902 (Timezone database fallback map is outdated). (Derick)
 - Fixed bug #48781 (Cyclical garbage collector memory leak). (Dmitry)
+- Fixed bug #48601 (xpath() returns FALSE for legitimate query). (Rob)
 - Fixed bug #48361 (SplFileInfo::getPathInfo should return the
   parent dir). (Etienne)
 - Fixed bug #48289 (iconv_mime_encode() quoted-printable scheme is broken).
